# greetlib

./: CMakeLists.txt  CMakePresets.json  README.md
src/: mylibgreet.cpp  mylibgreet.h
